--- a/App.config
+++ b/App.config
@@ -49,6 +49,12 @@
             <setting name="SnapRad" serializeAs="String">
                 <value>0.1</value>
             </setting>
+            <setting name="CLColor" serializeAs="String">
+                <value>#FFFF00FF</value>
+            </setting>
+            <setting name="CLWidth" serializeAs="String">
+                <value>2</value>
+            </setting>
         </CNC_Improvements_gcode_solids.Properties.Settings>
     </userSettings>
 </configuration>
