--- a/App.config
+++ b/App.config
@@ -55,6 +55,9 @@
             <setting name="CLWidth" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="SewTol" serializeAs="String">
+                <value>0.001</value>
+            </setting>
         </CNC_Improvements_gcode_solids.Properties.Settings>
     </userSettings>
 </configuration>
