--- a/App.config
+++ b/App.config
@@ -11,7 +11,7 @@
                 <value>C:\Program Files\FreeCAD 0.21\bin\FreeCADCMD.exe</value>
             </setting>
             <setting name="ProfileColor" serializeAs="String">
-                <value>#FF00FF00</value>
+                <value>#FFFFFF00</value>
             </setting>
             <setting name="ProfileWidth" serializeAs="String">
                 <value>1</value>
@@ -29,7 +29,13 @@
                 <value>1</value>
             </setting>
             <setting name="GraphicTextColor" serializeAs="String">
-                <value>#FFFBFF3D</value>
+                <value>#FFFB1111</value>
+            </setting>
+            <setting name="GridColor" serializeAs="String">
+                <value>#FF404040</value>
+            </setting>
+            <setting name="GridWidth" serializeAs="String">
+                <value>1</value>
             </setting>
             <setting name="TangentAngTol" serializeAs="String">
                 <value>0.122</value>
